--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 		</header>
 		<div class="introduction">
 			<p>
-				　横浜発祥の純国産ダンス「ハマチャチャ」を広く普及、多くの方々に楽しんでもらえるために日々活動している『関東ハマチャチャ同好会』。<br>
-				　2016年、それぞれの形で探求していた代表と副代表が出会い発足。その当時はハマチャチャのみで作品を披露するダンスチームもおらず、ハマチャチャの魅力をさらに伝えるべく日々邁進している。<br>
-				　コンセプトは『ハマチャチャが好きな人（または興味がある人）なら誰でも大歓迎』。老若男女が多数在籍し、2020年現在は「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動していおり、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も発足され鋭意活動中となっている。  
+				横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
+				2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
+				老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
 			</p>
 			<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
@@ -87,8 +87,8 @@
 			<div class="txt">
 				<div class="vMid">
 					<div class="intro-name"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
-					<p>　沖縄県那覇市出身。土地柄もあり日常的にブラックカルチャーに触れ、Locking・Soulなどのストリートダンスを踊り明かす日々を送る。上京後、都内某ディスコ店長としての勤務経験から、和製ディスコステップにも広く見聞を有している。<br>
-					　横浜フリーチャチャの伝道師"藤中一郎"氏から正統な後継者として認められ、現在は同人経営の"TWIN SOULS"にて勤務し、日夜ダンスと音楽に心血を注いでいる。ディスコ文化をこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えべく活動中。</p>
+					<p>沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
+					　横浜フリーチャチャの伝道師"藤中一郎"氏から、『ICHIRO STYLE』の正式な後継者として認められた唯一のダンサー。現在は関内"TWIN SOULS"にて勤務、日夜ダンスと音楽に心血を注いでいる。ディスコカルチャーをこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えるべく活動中。</p>
 				</div>
 			</div>
 		</div>
@@ -123,8 +123,27 @@
 	<section id="sec03">
 		<div class="inner">
 					<h2>そもそも「ハマチャチャ」とは</h2>
-					<p>　60年代後半...横浜は米軍駐留地としての面影がまだまだ色濃く、当時は基地も残されていた。そんな最中、全盛期を迎えていたディスコシーンにおいて「SOUL CHA-CHA」というステップダンスが流行していく。シーンの最先端であった横浜では独自の進化を遂げ、『横浜フリーチャチャ(通称:ハマチャチャ)』と呼ばれることとなる。<br>
-					　ライン形式(２～３名が同じ方向で踊る)で、基本となる「ベースステップ」を中心に、300種類以上あると言われる「バリエーション」を自由に組み合わせて展開していく。もともとダンサー向けとして伝承されてきた踊りではない事もあり、初心者でも気軽に楽しむ事ができる。
+					<p>1960年代後半...<br>
+						米軍駐留地としての面影を残した街、横浜。<br>
+						<br>
+						最新の音楽やファッション、ダンスが集まる場所…<br>
+						流行の最先端である踊り場は、当時の若者たちを魅了した。<br>
+						<br>
+						その内のダンス、男女ペアで踊られる"チャチャ"。<br>
+						黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていき数多くの応用技へと発展を遂げた。<br>
+						男女ペアで向かい合い、前後のステップを繰り返す形から横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
+						それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏がその第一人者の一人であるとされている。※1<br>
+						<br>
+						そしてシーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
+						フリチャチャの名手と呼ばれる存在を数多く輩出し、今でも語り継がれる元従業員、関係者は少なくない。同店でも当時フリチャチャは大変な人気を誇った。※2<br>
+						<br>
+						"LINDY"元店長・藤中一郎氏においては、現在のストリートダンスシーンにも活躍の幅を広げており、フリチャチャを自身のスタイルへと昇華しながらスクール(FDS)、WSなどを通して普及を続けている。事実、藤中氏に師事しフリチャチャを学ぶダンサーは全国的に存在。<br>
+						関東ハマチャチャ同好会の代表、副代表もまた藤中一郎氏に支持するダンサーの一人である。<br>
+						<br>
+						※1.自然発生的な広がりを見せたカルチャーであり、誰が・いつ・どこでを史実考証することが難しいため第一人者、考案者に関しては諸説あることを前提とする。ここではそのうちの一つとして、小山氏のお名前をご紹介とさせていただく。<br>
+						<br>
+						※2
+						当時数多くのディスコがあり、リンディ以外のフリチャチャシーンも間違いなく存在するが、すべての名前を紹介することは叶わずここでは割愛とさせていただく。
 					</p>
 					<br>
 					<br>
@@ -181,14 +200,14 @@
 								<img src="images/fds.jpg">
 								<h2 class="sec05linktitle">Freedom Dance School</h2>
 								<p> 藤中一郎氏主催のスクール</p>
-								<a href="https://www.facebook.com/yokohama.fds/">https://www.facebook.com/yokohama.fds/</a>
+								<a href="https://www.facebook.com/yokohama.fds/">www.facebook.com/yokohama.fds/</a>
 							</li>
 						
 							<li class="link_content">
 								<img src="images/twinsouls.jpg">
 								<h2 class="sec05linktitle" >TWIN SOULS</h2>
 								<p>藤中一郎氏が店長を勤める、ハマチャチャが踊れるバー</p>
-								<a href="https://www.facebook.com/TwinSoulsYokohama/">https://www.facebook.com/TwinSoulsYokohama/</a>
+								<a href="https://www.facebook.com/TwinSoulsYokohama/">www.facebook.com/TwinSoulsYokohama/</a>
 							</li>
 						</ul>
 
