--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#header">トップ</a></li>
 				<li><a href="#sec01">関東ハマチャチャ同好会とは</a></li>
 				<li><a href="#sec02">代表・副代表紹介</a></li>
-				<li><a href="#sec03">そもそもハマチャチャとは</a></li>
+				<li><a href="#sec03">ハマチャチャとは</a></li>
 				<li><a href="#sec04">バリエーション紹介</a></li>
 				<li><a href="#sec05">各種スケジュール</a></li>
 				<li><a href="#sec06">ご依頼・お問合せ</a></li>
@@ -70,9 +70,9 @@
 		</header>
 		<div class="introduction">
 			<p>
-				横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
-				2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
-				老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
+				　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
+				　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
+				　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
 			</p>
 			<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
@@ -87,7 +87,7 @@
 			<div class="txt">
 				<div class="vMid">
 					<div class="intro-name"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
-					<p>沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
+					<p>　沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
 					　横浜フリーチャチャの伝道師"藤中一郎"氏から、『ICHIRO STYLE』の正式な後継者として認められた唯一のダンサー。現在は関内"TWIN SOULS"にて勤務、日夜ダンスと音楽に心血を注いでいる。ディスコカルチャーをこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えるべく活動中。</p>
 				</div>
 			</div>
@@ -112,32 +112,32 @@
 				<div class="vMid">
 					<div class="intro-name"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
 					<br>
-					<p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ Na☆/ O-chan, etc., </p>
+					<p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ こころ/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ひらり/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ O-chan, etc., </p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- // 代表・副代表紹介-->
 
-	<!-- sec03 そもそもハマチャチャとは -->
+	<!-- sec03 ハマチャチャとは -->
 	<section id="sec03">
 		<div class="inner">
-					<h2>そもそも「ハマチャチャ」とは</h2>
+					<h2>「ハマチャチャ」とは</h2>
 					<p>1960年代後半...<br>
-						米軍駐留地としての面影を残した街、横浜。<br>
+						　米軍駐留地としての面影を残した街、横浜。<br>
 						<br>
-						最新の音楽やファッション、ダンスが集まる場所…<br>
+						　最新の音楽やファッション、ダンスが集まる場所…<br>
 						流行の最先端である踊り場は、当時の若者たちを魅了した。<br>
 						<br>
-						その内のダンス、男女ペアで踊られる"チャチャ"。<br>
-						黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていき数多くの応用技へと発展を遂げた。<br>
+						　その内のダンス、男女ペアで踊られる"チャチャ"。<br>
+						黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていくことで数多くの応用技へと発展を遂げた。<br>
 						男女ペアで向かい合い、前後のステップを繰り返す形から横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
 						それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏がその第一人者の一人であるとされている。※1<br>
 						<br>
-						そしてシーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
+						　そして、シーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
 						フリチャチャの名手と呼ばれる存在を数多く輩出し、今でも語り継がれる元従業員、関係者は少なくない。同店でも当時フリチャチャは大変な人気を誇った。※2<br>
 						<br>
-						"LINDY"元店長・藤中一郎氏においては、現在のストリートダンスシーンにも活躍の幅を広げており、フリチャチャを自身のスタイルへと昇華しながらスクール(FDS)、WSなどを通して普及を続けている。事実、藤中氏に師事しフリチャチャを学ぶダンサーは全国的に存在。<br>
+						　"LINDY"元店長・藤中一郎氏においては、現在のストリートダンスシーンにも活躍の幅を広げており、フリチャチャを自身のスタイルへと昇華しながらスクール(FDS)、WSなどを通して普及を続けている。事実、藤中氏に師事しフリチャチャを学ぶダンサーは全国的に存在。<br>
 						関東ハマチャチャ同好会の代表、副代表もまた藤中一郎氏に支持するダンサーの一人である。<br>
 						<br>
 						※1.自然発生的な広がりを見せたカルチャーであり、誰が・いつ・どこでを史実考証することが難しいため第一人者、考案者に関しては諸説あることを前提とする。ここではそのうちの一つとして、小山氏のお名前をご紹介とさせていただく。<br>
@@ -150,11 +150,11 @@
 					<div class="ref_article">
 						参考記事：
 						<a href="https://hamarepo.com/story.php?story_id=3100"><u>『本牧のディスコ文化から生まれたダンス「ハマチャチャ」の歴史と現在について教えて！</u></a>
-					<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/kqwuPNwPOKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<!-- <iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/kqwuPNwPOKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 				</div>
 		</div>
 	</section>
-	<!-- // sec03 そもそもハマチャチャとは -->
+	<!-- // sec03 ハマチャチャとは -->
 
 	<!-- sec04 バリエーション紹介 -->
 	<section id="sec04">
