remove ref youtube of sec03

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 					<br>
 					<br>
 					<div class="ref_article">
-						参考記事：
-						<a href="https://hamarepo.com/story.php?story_id=3100"><u>『本牧のディスコ文化から生まれたダンス「ハマチャチャ」の歴史と現在について教えて！</u></a>
+						<!-- 参考記事：
+						<a href="https://hamarepo.com/story.php?story_id=3100"><u>『本牧のディスコ文化から生まれたダンス「ハマチャチャ」の歴史と現在について教えて！</u></a> -->
 					<!-- <iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/kqwuPNwPOKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 				</div>
 		</div>
