--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CE2XJS74GF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CE2XJS74GF');
+</script>
 </head>
 
 <body>
@@ -58,22 +67,26 @@
 	<header id="header">
 		<div id="topImg"><img src="images/mainImg.jpg" alt=""></div>
 		<div id="toptitle">
-			<h1>関東ハマチャチャ同好会</h1>
-			<h2>Kanto Hamachacha Association</h2>
+			<h1 class="box raisewithbigtittle">関東ハマチャチャ同好会</h1>
+			<h2 class="box raisewithbigtittle">Kanto Hamachacha Association</h2>
 		</div>
 	</header>
 
 	<!-- sec01 関東ハマチャチャ同好会紹介 -->
-	<section id="sec01">
-		<header>
-			<h2>「関東ハマチャチャ同好会」とは</h2>
-		</header>
+	<section id="sec01">
+		<div class="box raisetoup">
+			<header>
+				<h2>「関東ハマチャチャ同好会」とは</h2>
+			</header>
+		</div>
 		<div class="introduction">
-			<p>
-				　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
-				　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
-				　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
-			</p>
+			<div class="box raisetoup">
+				<p>
+					　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
+					　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
+					　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
+				</p>
+			</div>
 			<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</section>
@@ -86,9 +99,9 @@
 				<img src="images/bun_photo_responsive.jpg" alt="ぶん_アー写" class="photo_responsive"></p>
 			<div class="txt">
 				<div class="vMid">
-					<div class="intro-name"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
-					<p>　沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
-					　横浜フリーチャチャの伝道師"藤中一郎"氏から、『ICHIRO STYLE』の正式な後継者として認められた唯一のダンサー。現在は関内"TWIN SOULS"にて勤務、日夜ダンスと音楽に心血を注いでいる。ディスコカルチャーをこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えるべく活動中。</p>
+					<div class="intro-name box raisetoleft"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
+					<div class="box raisetoleft"><p>　沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
+					　横浜フリーチャチャの伝道師"藤中一郎"氏から、『ICHIRO STYLE』の正式な後継者として認められた唯一のダンサー。現在は関内"TWIN SOULS"にて勤務、日夜ダンスと音楽に心血を注いでいる。ディスコカルチャーをこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えるべく活動中。</p></div>
 				</div>
 			</div>
 		</div>
@@ -98,9 +111,9 @@
 				<img src="images/chibahiro_photo_responsive.jpg" alt="千葉ヒロ_アー写" class="photo_responsive">
 			</p>
 			<div class="txt">
-				<div class="vMid">
-					<div class="intro-name"><h2>【副代表】  </h2><h1>”千葉ヒロ”</h1></div>
-					<p>　音楽一家に生まれ、JAZZを中心としたブラックミュージックに触れながら幼少期を過ごす(実弟は某メジャーデビューアーティスト。) 高校時代よりストリートダンスに没頭(国内外受賞歴は100以上)、大学卒業を機に横浜へ移り住み、同藤中一郎氏の運営スクール”FDS”に通い詰め、ハマチャチャを習得。元高校教員でもあり、青年海外協力隊としてアフリカから2020年1月帰国後、普及に向けた活動を加速させている。</p>
+				<div class="vMid box raisetoright">
+					<div class="intro-name box raisetoright"><h2>【副代表】  </h2><h1>”千葉ヒロ”</h1></div>
+					<div class="box raisetoright"><p>　音楽一家に生まれ、JAZZを中心としたブラックミュージックに触れながら幼少期を過ごす(実弟は某メジャーデビューアーティスト。) 高校時代よりストリートダンスに没頭(国内外受賞歴は100以上)、大学卒業を機に横浜へ移り住み、同藤中一郎氏の運営スクール”FDS”に通い詰め、ハマチャチャを習得。元高校教員でもあり、青年海外協力隊としてアフリカから2020年1月帰国後、普及に向けた活動を加速させている。</p></div>
 				</div>
 			</div>
 		</div>
@@ -110,9 +123,9 @@
 				<img src="images/kanto_hamachacha_responsive.jpeg" alt="関東ハマチャチャ同好会_アー写" class="photo_responsive"></p>
 			<div class="txt">
 				<div class="vMid">
-					<div class="intro-name"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
+					<div class="intro-name box raisetoleft"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
 					<br>
-					<p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ こころ/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ひらり/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ O-chan, etc., </p>
+					<div class="box raisetoleft"><p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ こころ/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ひらり/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ O-chan, etc., </p></div>
 				</div>
 			</div>
 		</div>
@@ -122,29 +135,29 @@
 	<!-- sec03 ハマチャチャとは -->
 	<section id="sec03">
 		<div class="inner">
-					<h2>「ハマチャチャ」とは</h2>
-					<p>　1960年代後半...<br>
-						米軍駐留地としての面影を残した街、横浜。<br>
-						<br>
-						　最新の音楽やファッション、ダンスが集まる場所…<br>
-						流行の最先端である踊り場は、当時の若者たちを魅了した。<br>
-						<br>
-						　その内のダンス、男女ペアで踊られる"チャチャ"。<br>
-						黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていくことで数多くの応用技へと発展を遂げた。<br>
-						男女ペアで向かい合い、前後のステップを繰り返す形から横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
-						それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏がその第一人者の一人であるとされている。※1<br>
-						<br>
-						　そして、シーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
-						フリチャチャの名手と呼ばれる存在を数多く輩出し、今でも語り継がれる元従業員、関係者は少なくない。同店でも当時フリチャチャは大変な人気を誇った。※2<br>
-						<br>
-						　"LINDY"元店長・藤中一郎氏においては、現在のストリートダンスシーンにも活躍の幅を広げており、フリチャチャを自身のスタイルへと昇華しながらスクール(FDS)、WSなどを通して普及を続けている。事実、藤中氏に師事しフリチャチャを学ぶダンサーは全国的に存在。<br>
-						関東ハマチャチャ同好会の代表、副代表もまた藤中一郎氏に支持するダンサーの一人である。<br>
-						<br>
-						※1.自然発生的な広がりを見せたカルチャーであり、誰が・いつ・どこでを史実考証することが難しいため第一人者、考案者に関しては諸説あることを前提とする。ここではそのうちの一つとして、小山氏のお名前をご紹介とさせていただく。<br>
-						<br>
-						※2
-						当時数多くのディスコがあり、リンディ以外のフリチャチャシーンも間違いなく存在するが、すべての名前を紹介することは叶わずここでは割愛とさせていただく。
-					</p>
+					<h2 class="box raisewithbig">「ハマチャチャ」とは</h2>
+					<div class="box raisetoright"><p>　1960年代後半...<br>
+							米軍駐留地としての面影を残した街、横浜。<br></div>
+							<br>
+							<div class="box raisetoright">　最新の音楽やファッション、ダンスが集まる場所…<br>
+							流行の最先端である踊り場は、当時の若者たちを魅了した。</div><br>
+							<br>
+							<div class="box raisetoright">　その内のダンス、男女ペアで踊られる"チャチャ"。<br>
+							黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていくことで数多くの応用技へと発展を遂げた。<br>
+							男女ペアで向かい合い、前後のステップを繰り返す形から横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
+							それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏がその第一人者の一人であるとされている。※1<br></div>
+							<br>
+							<div class="box raisetoright">　そして、シーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
+							フリチャチャの名手と呼ばれる存在を数多く輩出し、今でも語り継がれる元従業員、関係者は少なくない。同店でも当時フリチャチャは大変な人気を誇った。※2<br></div>
+							<br>
+							<div class="box raisetoright">　"LINDY"元店長・藤中一郎氏においては、現在のストリートダンスシーンにも活躍の幅を広げており、フリチャチャを自身のスタイルへと昇華しながらスクール(FDS)、WSなどを通して普及を続けている。事実、藤中氏に師事しフリチャチャを学ぶダンサーは全国的に存在。<br>
+							関東ハマチャチャ同好会の代表、副代表もまた藤中一郎氏に支持するダンサーの一人である。<br></div>
+							<br>
+							<div class="box raisetoright">※1.自然発生的な広がりを見せたカルチャーであり、誰が・いつ・どこでを史実考証することが難しいため第一人者、考案者に関しては諸説あることを前提とする。ここではそのうちの一つとして、小山氏のお名前をご紹介とさせていただく。<br>
+							<br>
+							※2
+							当時数多くのディスコがあり、リンディ以外のフリチャチャシーンも間違いなく存在するが、すべての名前を紹介することは叶わずここでは割愛とさせていただく。</div>
+						</p>
 					<br>
 					<br>
 					<div class="ref_article">
@@ -159,7 +172,7 @@
 	<!-- sec04 バリエーション紹介 -->
 	<section id="sec04">
 		<div class="inner">
-			<h2>バリエーション紹介</h2>
+			<div class="box raisewithbig"><h2>バリエーション紹介</h2></div>
 			<ul class="col3">
 				<li>
 					<h3>”ベンツ”</h3>
@@ -184,7 +197,7 @@
 	<!-- sec05 各種スケジュール -->
 	<section id="sec05">
 		<div class="inner">
-			<h2>各種スケジュール</h2>
+			<div class="box raisewithbig"><h2>各種スケジュール</h2></div>
 			<h3>【ご連絡】<br>
 			<div class="text">昨今の感染症事情を鑑みまして、細心の注意を払いながら各種レッスン・イベント出演を展開しております。<br>ご参加される際には、個々人の皆様にも十分な対策のご協力の程、何卒よろしく申し上げます。<br></div><br></h3>
 
@@ -255,5 +268,40 @@
 		<!-- (Web関係の仕事依頼は<a href="mailto:chibahiro0514@gmail.com?target="_top">chibahiro0514@gmail.com</a>まで) -->
 		<br>
 	</footer>
+
+	<!-- スクロールでふわっと出てくる -->
+	<script>
+		window.addEventListener("scroll", function(e) {
+			console.log(
+				"スクロールイベントが呼ばれました。スクロール量" + e.pageY + "px"
+			);
+		});
+
+		const boxes = document.querySelectorAll(".box");
+		const boxesArray = Array.prototype.slice.call(boxes, 0);
+
+		const options = {
+			root: null,
+			rootMargin: "0px 0px -150px",
+			threshold: 0
+		};
+		const observer = new IntersectionObserver(doWhenIntersect, options);
+		boxesArray.forEach(function(box) {
+			observer.observe(box);
+		});
+
+		/**
+		 * 交差したときに呼び出す関数
+		 * @param entries
+		 */
+		function doWhenIntersect(entries) {
+			const entriesArray = Array.prototype.slice.call(entries, 0);
+			entriesArray.forEach(function(entry) {
+				if (entry.isIntersecting) {
+					entry.target.classList.add("show");
+				}
+			});
+		}
+	</script>
 </body>
 </html>
