adjust js a little

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 	<header id="header">
 		<div id="topImg"><img src="images/mainImg.jpg" alt=""></div>
 		<div id="toptitle">
-			<h1 class="box raisewithbigtittle">関東ハマチャチャ同好会</h1>
-			<h2 class="box raisewithbigtittle">Kanto Hamachacha Association</h2>
+			<h1 class="box raisewithbigtittle1">関東ハマチャチャ同好会</h1>
+			<h2 class="box raisewithbigtittle2">Kanto Hamachacha Association</h2>
 		</div>
 	</header>
 
@@ -83,8 +83,8 @@
 			<div class="box raisetoup">
 				<p>
 					　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
-					　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進している。コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
-					　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」ハマチャチャ同好会も鋭意活動中となっている。
+					　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進、コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
+					　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」や「北海道」ハマチャチャ同好会も鋭意活動中となっている。
 				</p>
 			</div>
 			<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -139,13 +139,13 @@
 					<div class="box raisetoright"><p>　1960年代後半...<br>
 							米軍駐留地としての面影を残した街、横浜。<br></div>
 							<br>
-							<div class="box raisetoright">　最新の音楽やファッション、ダンスが集まる場所…<br>
+							<div class="box raisetoright">　最新の音楽やファッション、ダンスが集まる場所...<br>
 							流行の最先端である踊り場は、当時の若者たちを魅了した。</div><br>
 							<br>
 							<div class="box raisetoright">　その内のダンス、男女ペアで踊られる"チャチャ"。<br>
 							黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていくことで数多くの応用技へと発展を遂げた。<br>
-							男女ペアで向かい合い、前後のステップを繰り返す形から横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
-							それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏がその第一人者の一人であるとされている。※1<br></div>
+							男女ペアで向かい合う形から、前後のステップを繰り返す横並びでのラインダンス、アドリブ感溢れるスタイリッシュな形へ。<br>
+							それがパートナーとシンクロさせるダンス、横浜フリーチャチャの原型であり、故・小山成光(しげみつ)氏はその第一人者の一人であるとされている。※1<br></div>
 							<br>
 							<div class="box raisetoright">　そして、シーンを語るに欠かせないひとつ、横浜ディスコブームを牽引し、伝説と呼ばれた「ファッションディスコ"LINDY(リンディ)"」<br>
 							フリチャチャの名手と呼ばれる存在を数多く輩出し、今でも語り継がれる元従業員、関係者は少なくない。同店でも当時フリチャチャは大変な人気を誇った。※2<br></div>
@@ -155,8 +155,7 @@
 							<br>
 							<div class="box raisetoright">※1.自然発生的な広がりを見せたカルチャーであり、誰が・いつ・どこでを史実考証することが難しいため第一人者、考案者に関しては諸説あることを前提とする。ここではそのうちの一つとして、小山氏のお名前をご紹介とさせていただく。<br>
 							<br>
-							※2
-							当時数多くのディスコがあり、リンディ以外のフリチャチャシーンも間違いなく存在するが、すべての名前を紹介することは叶わずここでは割愛とさせていただく。</div>
+							※2.当時数多くのディスコがあり、リンディ以外のフリチャチャシーンも間違いなく存在するが、すべての名前を紹介することは叶わず、ここでは割愛とさせていただく。</div>
 						</p>
 					<br>
 					<br>
@@ -233,7 +232,7 @@
 	<!-- sec06 ご依頼・お問合せ -->
 	<section id="sec06">
 		<div class="inner">
-			<h2>ご依頼・お問合せ</h2>
+			<div class="box raisewithbig"><h2>ご依頼・お問合せ</h2></div>
 			<p>イベント・ショーケースはもちろん、様々な催し物から、振り付け等のご依頼にも対応可能です。<br>ご気軽にお問合せ下さい。</p>
 
 		<form action="php/mailform.php" method="post" id="mail_form">
