--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<img src="images/bun_photo_responsive.jpg" alt="ぶん_アー写" class="photo_responsive"></p>
 			<div class="txt">
 				<div class="vMid">
-					<div class="intro-name box raisetoright"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
+					<div class="intro-name box raisetoleft"><h2>【代表】  </h2><h1>”ぶんちゃん”</h1></div>
 					<div class="box raisetoright"><p>　沖縄県那覇市出身。Locking、Soulなどのストリートダンスを得意とし、都内某ディスコ店長としての勤務経験から和製ディスコステップにも広く見聞を有する。<br>
 					　横浜フリーチャチャの伝道師"藤中一郎"氏から、『ICHIRO STYLE』の正式な後継者として認められた唯一のダンサー。現在は関内"TWIN SOULS"にて勤務、日夜ダンスと音楽に心血を注いでいる。ディスコカルチャーをこよなく愛し、より広い世代間で共有できるハマチャチャの魅力を伝えるべく活動中。</p></div>
 				</div>
@@ -123,7 +123,7 @@
 				<img src="images/kanto_hamachacha_responsive.jpeg" alt="関東ハマチャチャ同好会_アー写" class="photo_responsive"></p>
 			<div class="txt">
 				<div class="vMid">
-					<div class="intro-name box raisetoright"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
+					<div class="intro-name box raisetoleft"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
 					<br>
 					<div class="box raisetoright"><p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ こころ/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ひらり/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ O-chan, etc., </p></div>
 				</div>
