adjust slide as 20px

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<img src="images/kanto_hamachacha_responsive.jpeg" alt="関東ハマチャチャ同好会_アー写" class="photo_responsive"></p>
 			<div class="txt">
 				<div class="vMid">
-					<div class="intro-name box raisetoleft"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
+					<div class="intro-name box raisetoright"><h1>【メンバー紹介】<h2>(AtoZ)</h2></h1></div>
 					<br>
 					<div class="box raisetoright"><p>あいあい/ あづみ/ おかぴ/ かっぱ/ ガレ/ きみどり/ きりん/ けるみん/ こうへい/ こころ/ しんたろう/ たいら/ たかつ/ たすくん/ たるしる/ ばっちゃん/ はと/ ひらり/ ぽん酢/ まねこ/ めいと/ ゆかり/ よしお/ 黒衣/ 紫音/ KODAI/ Kope/ MASA/ O-chan, etc., </p></div>
 				</div>
