--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							米軍駐留地としての面影を残した街、横浜。<br></div>
 							<br>
 							<div class="box raisetoright">　最新の音楽やファッション、ダンスが集まる場所...<br>
-							流行の最先端である踊り場は、当時の若者たちを魅了した。</div><br>
+							流行の最先端である踊り場は、当時の若者たちを魅了した。</div>
 							<br>
 							<div class="box raisetoright">　その内のダンス、男女ペアで踊られる"チャチャ"。<br>
 							黒人たちの踊る姿に着想を得て8拍子の基本ステップを考案、更に振り付けを加えていくことで数多くの応用技へと発展を遂げた。<br>
