what's new demo

--- a/index.html
+++ b/index.html
@@ -74,20 +74,37 @@
 
 	<!-- sec01 関東ハマチャチャ同好会紹介 -->
 	<section id="sec01">
-		<div class="box raisetoup">
-			<header>
-				<h2>「関東ハマチャチャ同好会」とは</h2>
-			</header>
-		</div>
-		<div class="introduction">
-			<div class="box raisetoup">
-				<p>
-					　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
-					　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進、コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
-					　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」や「北海道」ハマチャチャ同好会も鋭意活動中となっている。
-				</p>
+		<div class="inner">
+			<div class="link_wrapper">
+				<h2>What's New</h2>
+					<div class="link_wrapper_responsive">
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						<p>こちらにアップデート内容が追加されていきます。</p>
+						</ul>
+					</div>
+				</div>
+
+			<div class="box raisetoup">
+				<header>
+					<h2>「関東ハマチャチャ同好会」とは</h2>
+				</header>
 			</div>
-			<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<div class="introduction">
+				<div class="box raisetoup">
+					<p>
+						　横浜発祥の純国産ダンス「フリチャチャ(ハマチャチャ)」を広く普及、多くの仲間と楽しむことを目的に活動している『関東ハマチャチャ同好会』<br>
+						　2016年に発足し、フリチャチャの魅力をさらに伝えるべく日々邁進、コンセプトは『横浜フリーチャチャが好きな人（または興味がある人）なら誰でも大歓迎』<br>
+						　老若男女多数在籍し、2020年現在では「関東ハマチャチャ同好会」としてのイベント出演数も累計50本を突破。その他にもレッスン・イベント開催など精力的に活動しており、今やその活動は全国各地に波及、「関西」や「北海道」ハマチャチャ同好会も鋭意活動中となっている。
+					</p>
+				</div>
+				<iframe class="youtube_movie" width="560" height="315" src="https://www.youtube.com/embed/gdwW6IUYAYo?start=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</div>
 	</section>
 	<!-- //sec01関東ハマチャチャ同好会紹介 -->
