--- a/index.html
+++ b/index.html
@@ -75,20 +75,11 @@
 	<!-- sec01 関東ハマチャチャ同好会紹介 -->
 	<section id="sec01">
 		<div class="inner">
-			<div class="link_wrapper">
+			<div class="WhatsNewWrapper">
 				<h2>What's New</h2>
-					<div class="link_wrapper_responsive">
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						<p>こちらにアップデート内容が追加されていきます。</p>
-						</ul>
-					</div>
-				</div>
+				【レッスン情報】<br>
+				<a href="#sec05">スケジュール</a>に3月27日(土)Webレッスン情報を更新しました。
+			</div>
 
 			<div class="box raisetoup">
 				<header>
